Wed Dec 11 01:50:31 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/Makefile.in (SPECIAL_DEPEND): Delete d1mach.o from the list.

Tue Dec 10 01:43:10 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0 released.

Fri Dec  6 15:23:50 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.94.

Wed Nov 20 01:00:43 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/Makefile.in (install): Also install lo-error.h.

	* Makefile.in (MISC_OBJ): Add misc/f77-fcn.o.

	* misc/lo-error.h: New file, moved here from liboctave.
	* misc/lo-error.c: Rename from lo-error.cc.  Make this a C-file
	instead of C++.

	* Version 1.93.

Tue Nov 19 23:04:24 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/Makefile.in: Add variables for installing things.

	* Makerules.in (install, uninstall): Make these double colon rules.

	* f77-fcn.c, f77-fcn.h: New files, from liboctave.

	* misc/Makefile.in (SPECIAL_DEPEND): Add f77-fcn.o.
	(SPECIAL): Add f77-fcn.c and f77-fcn.h.
	(CPICDEP): Add pic/f77-fcn.o.
	(install): Install f77-fcn.h in $(octincludedir).
	(uninstall): Delete f77-fcn.h from $(octincludedir).

	* Makerules.in (CRUFT_CSRC): Delete unsed variable.

Thu Nov 14 00:07:00 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.92.

Fri Nov  8 09:55:40 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (libcruft.a): Delete target.
	* Makerules.in, Makefile.in: Use real archive rules to build
	libcruft.a in parts.

	* Makefile.in (install): Use $(INSTALL_PROGRAM) for installing
	shared library.

Thu Nov  7 12:43:17 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: Add -lm when building shared library.

	* Version 1.91.

Mon Nov  4 10:09:00 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lapack/dlag2.f, lapack/dggbal.f, lapack/dgghrd.f, lapack/dhgeqz.f:
	New files.

	* Makefile.in (install): Use INSTALL_PROGRAM for shared version of
	libcruft.	

Sun Nov  3 19:37:37 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
