@@ -9,8 +9,8 @@ to be that the compilers or libraries have not been installed
 properly.  I suspect that this often results from a botched upgrade,
 or from attempting to install the compilers from the standard source
 distributions.  But in some cases, the cause has been a buggy Linux
-distributions.  Many of these problems go unnoticed because much of
-the software for Linux is written in C, not C++.
+distribution.  Many of these problems go unnoticed because much of the
+software for Linux is written in C, not C++.
 
 Octave compiles, but it won't run
 ---------------------------------
@@ -67,10 +67,10 @@ gcc version 2.7.2
 End of search list.
 ...
 
-If the location of your include files is not listed in the search
-path, then you might be able to fix that with a symbolic link.
-However, if your version of libg++ was not compiled with your current
-version of gcc, you are likely to run into more trouble.
+If the location of the correct set of include files is not listed in
+the search path, then you might be able to fix that with a symbolic
+link.  However, if your version of libg++ was not compiled with your
+current version of gcc, you are likely to run into more trouble.
 
 Upgrading your compiler and libraries
 -------------------------------------
