@@ -1,3 +1,8 @@
+Mon Dec 16 15:23:04 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Makefile.in (install): Use ls -LR to create ls-R database.
+	Also list contents of $libexecdir/octave in ls-R database.
+
 Tue Dec 10 01:43:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Version 2.0 released.
