@@ -1,3 +1,7 @@
+Tue Dec 17 11:02:02 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* misc/lo-error.c: Convert C++-style comments to C-style comments.
+
 Wed Dec 11 01:50:31 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* misc/Makefile.in (SPECIAL_DEPEND): Delete d1mach.o from the list.
